[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Scripts/GlobalCamera.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Assets/Meshes/Corner.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/Meshes/blocker.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/Textures/Tutorial.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/Flying.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/Action Misc 2.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Long Slide Down.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Collect 4.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Scenes/score.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Materials/mat2.tres" type="Material" id=11]
[ext_resource path="res://Assets/Materials/mat3.tres" type="Material" id=12]
[ext_resource path="res://Assets/Materials/mat0.tres" type="Material" id=13]
[ext_resource path="res://Assets/Materials/mat1.tres" type="Material" id=14]
[ext_resource path="res://Assets/Fonts/Epilogue-BlackItalic.ttf" type="DynamicFontData" id=15]

[sub_resource type="PlaneMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="PlaneMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.205136, 0.202562, 0.204994 )

[sub_resource type="DynamicFont" id=20]
size = 88
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=21]
size = 37
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 8
font_data = ExtResource( 15 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 21 )

[node name="Arena" type="Spatial"]

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="SFX_Clash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SFX_Fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SFX_Respawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="GlobalCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -3.20093e-08, 1, 0, -1, -3.20093e-08, 0, 30.7847, 0 )
size = 44.3647
script = ExtResource( 1 )
minScreen = 15
maxScreen = 25

[node name="Plane" type="RigidBody" parent="."]
transform = Transform( 0.117021, 0, 0, 0, 0.1, 0, 0, 0, 0.117021, 0, -0.138262, 0 )
mode = 1
mass = 50.0
gravity_scale = 0.0

[node name="Arena" type="MeshInstance" parent="Plane"]
transform = Transform( 207.057, 0, 0, 0, 10, 0, 0, 0, 147.366, 0, -1, 0 )
mesh = SubResource( 8 )
skeleton = NodePath(".")
material/0 = SubResource( 9 )

[node name="Limit" type="MeshInstance" parent="Plane"]
transform = Transform( 293.681, 0, 0, 0, 9.94068, 0, 0, 0, 195.601, 0, -6.52603, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="SpotLight" type="SpotLight" parent="Plane"]
transform = Transform( 8.54548, 0, 0, 0, -4.37114e-07, 10, 0, -8.54548, -3.73535e-07, -224.657, 165.786, -168.062 )
visible = false
light_indirect_energy = 6.031
spot_range = 33.4766
spot_angle = 77.6359

[node name="SpotLight2" type="SpotLight" parent="Plane"]
transform = Transform( 8.54548, 0, 0, 0, -4.37114e-07, 10, 0, -8.54548, -3.73535e-07, 224.496, 165.786, -168.062 )
visible = false
light_indirect_energy = 6.031
spot_range = 33.4766
spot_angle = 77.6359

[node name="SpotLight3" type="SpotLight" parent="Plane"]
transform = Transform( 8.54548, 0, 0, 0, -4.37114e-07, 10, 0, -8.54548, -3.73535e-07, -224.657, 165.786, 164.3 )
visible = false
light_indirect_energy = 6.031
spot_range = 33.4766
spot_angle = 77.6359

[node name="SpotLight4" type="SpotLight" parent="Plane"]
transform = Transform( 8.54548, 0, 0, 0, -4.37114e-07, 10, 0, -8.54548, -3.73535e-07, 224.496, 165.786, 168.381 )
visible = false
light_indirect_energy = 6.031
spot_range = 33.4766
spot_angle = 77.6359

[node name="SpotLight5" type="SpotLight" parent="Plane"]
transform = Transform( 8.54548, 0, 0, 0, -4.37114e-07, 10, 0, -8.54548, -3.73535e-07, -0.489595, 165.786, -4.48023 )
visible = false
light_energy = 0.25
light_indirect_energy = 6.031
spot_range = 33.4766
spot_angle = 77.6359

[node name="TLCorner" type="CSGMesh" parent="Plane"]
transform = Transform( 41.8158, 0, 0, 0, 43.0589, 0, 0, 0, 41.8158, -185.907, 7.17147, -84.5098 )
use_collision = true
mesh = ExtResource( 3 )

[node name="BLCorner" type="CSGMesh" parent="Plane"]
transform = Transform( -1.82783e-06, 0, 41.8158, 0, 43.0589, 0, -41.8158, 0, -1.82783e-06, -143.913, 7.17147, 126.489 )
use_collision = true
mesh = ExtResource( 3 )

[node name="TRCorner" type="CSGMesh" parent="Plane"]
transform = Transform( 4.98649e-07, 0, -41.8158, 0, 43.0589, 0, 41.8158, 0, 4.98649e-07, 144.105, 7.17147, -126.384 )
use_collision = true
mesh = ExtResource( 3 )

[node name="BRCorner" type="CSGMesh" parent="Plane"]
transform = Transform( -41.8158, 0, -3.65566e-06, 0, 43.0589, 0, 3.65566e-06, 0, -41.8158, 186.163, 7.17147, 84.5063 )
use_collision = true
mesh = ExtResource( 3 )

[node name="TBlocker" type="CSGMesh" parent="Plane"]
transform = Transform( 41.8158, 0, 0, 0, 43.0589, 0, 0, 0, 41.8158, -59.8901, 7.17046, -103.583 )
use_collision = true
mesh = ExtResource( 4 )

[node name="BBlocker" type="CSGMesh" parent="Plane"]
transform = Transform( -41.8158, 0, -3.65566e-06, 0, 43.0589, 0, 3.65566e-06, 0, -41.8158, 60.6955, 7.17147, 104.988 )
use_collision = true
mesh = ExtResource( 4 )

[node name="CSGBox2" type="CSGBox" parent="Plane"]
transform = Transform( 29.8278, 0, 0, 0, 9.97281, 0, 0, 0, 8.60743, -307.637, 10.1426, 0 )
depth = 45.0
material = SubResource( 13 )

[node name="CSGBox" type="CSGBox" parent="Plane"]
transform = Transform( 29.9092, 0, 0, 0, 10, 0, 0, 0, 8.63093, 307.637, 10.1426, 0 )
depth = 45.0
material = SubResource( 12 )

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( -4.0482e-08, 0, 1.27804, 0, 1, 0, -0.926119, 0, -5.58651e-08, 0, 0.876029, -19.9116 )
visible = false
depth = 45.0

[node name="CSGBox4" type="CSGBox" parent="."]
transform = Transform( -4.0482e-08, 0, 1.27804, 0, 1, 0, -0.926119, 0, -5.58651e-08, 0, 0.876029, 19.9116 )
visible = false
depth = 45.0
material = SubResource( 7 )

[node name="Area" type="Area" parent="."]
transform = Transform( 117.94, 0, 0, 0, 10, 0, 0, 0, 84.149, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )

[node name="TutorialHUD" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TutorialHUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = -22.0
rect_scale = Vector2( 44.66, 60.976 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TutorialHUD"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )

[node name="PressStart" type="Label" parent="TutorialHUD/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -429.0
margin_top = -269.0
margin_right = 486.0
margin_bottom = -178.0
custom_fonts/font = SubResource( 20 )
text = "Press   Start / Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tip" type="Label" parent="TutorialHUD/TextureRect"]
margin_left = 515.0
margin_top = 1019.0
margin_right = 1492.0
margin_bottom = 1058.0
theme = SubResource( 22 )
text = "You can use the Dash to break your speed too!"

[node name="world" type="Node" parent="."]
script = ExtResource( 2 )
num_players = 4
debugMode = true
materials = [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ) ]

[node name="spawnPoint1" type="Spatial" parent="world"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0.163, 10 )

[node name="spawnPoint2" type="Spatial" parent="world"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0.163, -10 )

[node name="spawnPoint4" type="Spatial" parent="world"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0.163, 10 )

[node name="spawnPoint3" type="Spatial" parent="world"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0.163, -10 )

[node name="scoreBoard0" parent="." instance=ExtResource( 10 )]
visible = false

[node name="scoreBoard1" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 1298.0

[node name="scoreBoard2" parent="." instance=ExtResource( 10 )]
visible = false
margin_top = -690.0
rect_pivot_offset = Vector2( -787, 702.6 )

[node name="scoreBoard3" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 1298.0
margin_top = -690.0
rect_pivot_offset = Vector2( -787, 702.6 )
